# onboarding-bot-model

./: .gitignore  LICENSE.md  README.md  TEAM.ipynb  map.html
.github/workflows/: staging-image.yaml
Langserves/: LANGSERVES.md
Langserves/basic/: README.md  pyproject.toml
Langserves/basic/app/: chatbot.py  server.py
langchains/: LANGCHAINS.md
langchains/GitHub/: File_Directory.ipynb  RAG_Connect.ipynb  RAG_Connect_Pinecone.ipynb  Read_Repo.ipynb  Readme_ Downloader.ipynb  dev-launchers_repositories.json
langchains/chain/: template.ipynb  template_HF_Dolly.ipynb
langchains/chain/attempt/: cloudflare_Mistral.ipynb  local_Bart.ipynb  local_Bitnet.ipynb  local_Dolly.ipynb  local_Falcon.ipynb  local_GPTNeo.ipynb  local_Mistral.ipynb  local_OpenLlama.ipynb  local_StarCoder.ipynb  local_Wizard.ipynb  online_Flan.ipynb
langchains/dialog/Dolly_2/: ABOUT.md  offline.ipynb  online.ipynb
langchains/embed/: benchmark.ipynb
langchains/retrieve/: template.ipynb
langchains/store/: template.ipynb
langchains/transform/: split.py  template.ipynb
langserves/: request.ipynb
langserves/basic/: README.md  pyproject.toml
langserves/basic/app/: chatbot.py  index.html  server.py
models/: MODELS.md
models/Bloom/: README.md
models/Dialo_Gpt/: Untitled-1.ipynb  main.ipynb
models/Falcon/: README.md
models/Falcon-180B-Chat/: HuggingFace_Inference_Falcon.ipynb
models/Llama_2/: README.md
models/TheBlokezephyr-7B-beta-GGUF/: MAIN_1.ipynb  main - Copy.ipynb
models/facebook_bart_large/: onboardingbot.ipynb
staging/: kservice.yaml  kustomization.yaml
(+72 files in other folders)
